--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.1
+  url_launcher: ^6.1.4
+  share_plus: ^4.0.10
+  easy_localization: ^3.0.1
+  flutter_screenutil: ^5.5.3+2
+  image_picker: ^0.8.5+3
+  flutter_image_slideshow: ^0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +69,8 @@ flutter:
     - assets/image/
     - assets/icon/heart.png
     - assets/icon/
+    - assets/langs/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
