--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   image_picker: ^0.8.5+3
   flutter_image_slideshow: ^0.1.2
+  string_validator: ^0.3.0
+  country_code_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
